--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,16 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.4",
+        "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
+        "symfony/debug-bundle": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/twig-bundle": "4.3.*",
+        "symfony/web-profiler-bundle": "4.3.*",
         "symfony/web-server-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
